the terms of the GNU Free Documentation License, Version 1.3 or any later
version published by the Free Software Foundation; with no Invariant Sections,
no Front-Cover Texts, and no Back-Cover Texts. A copy of the license is included
in the sources of this package and additionally can be obtained from Internet
<https://www.gnu.org/licenses>.

* [2019-] added data structure TMCG_Bigint
* [2019-08-29] aiounicast_*: added improved authentication by sequence numbers
* [2019-08-28] RFC4880: added quick-check in TMCG_OpenPGP_Signature::Verify()
* [2019-08-25] RFC4880: added SHA3 from RFC4880bis
* [2019-08-25] RFC4880: added tmcg_openpgp_multiple_octets_t and changed members
               from TMCG_OpenPGP_Signature (i.e. embeddedsigs and recipientfprs)
* [2019-08-15] RBC: added out-of-order handler to retrieve missing messages
* [2019-08-13] RBC: added member fifo_skip and a mechanism to skip FIFO-ordering
* [2019-08-12] RBC: added member ID_log to trace the history of ID operations
* [2019-08-12] RFC4880: improved MessageParse() for detecting invalid structure
* [2019-08-11] RFC4880: added Intended Recipient Fingerprint subpacket
               cf. https://gitlab.com/openpgp-wg/rfc4880bis/merge_requests/19
* [2019-08-11] RFC4880: improved TMCG_OpenPGP_Signature::operator < according
               to suggested canonical ordering, cf. https://dev.gnupg.org/T3389
* [2019-08-09] aiounicast_select: added chunked encryption mode for robustness
* [2019-08-08] aiounicast: added member aio_is_chunked
* [2019-08-05] aiounicast_*: fixes missing MAC reset even if verification fails
* [2019-07-14] RBC: added recoverID() to recover an old state of the channel
* [2019-07-14] RBC: added QueueFrom() to queue an already delivered message
* [2019-07-13] RBC: fixed a logical error w.r.t. so-called bad r-answer messages
* [2019-07-11] RFC4880: added member expired to TMCG_OpenPGP_Signature, 
               TMCG_OpenPGP_Subkey, and TMCG_OpenPGP_Pubkey